--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,29 @@
     <exception-type>java.lang.ArithmeticException</exception-type>
     <location>/error/type/arithmetic/error.jsp</location>
   </error-page>
+  
+	  <!--web.xml-->
+	<resource-ref>
+	   <description>DB Connection</description>
+	   <res-ref-name>jdbc/oracleDB</res-ref-name>
+	   <res-type>javax.sql.DataSource</res-type>
+	   <res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
