--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,18 +17,14 @@
     <servlet-name>nowServlet</servlet-name>
     <url-pattern>/nowServletUrl</url-pattern>
   </servlet-mapping>
-  
-  <filter>
-  	<filter-name>requestCountFilter</filter-name>
-  	<filter-class>kr.or.ddit.filter.RequestCountFilter</filter-class>
-  </filter>
-  <filter-mapping>
-  	<filter-name>requestCountFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
-  
-  
+<!--   <filter> -->
+<!--     <filter-name>requestCountFilter</filter-name> -->
+<!--     <filter-class>kr.or.ddit.filter.RequestCountFilter</filter-class> -->
+<!--   </filter> -->
+<!--   <filter-mapping> -->
+<!--     <filter-name>requestCountFilter</filter-name> -->
+<!--     <url-pattern>/*</url-pattern> -->
+<!--   </filter-mapping> -->
   <servlet>
     <servlet-name>timesTables</servlet-name>
     <servlet-class>kr.or.ddit.servlet.TimesTablesServlet</servlet-class>
