--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,6 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-
   <servlet>
     <servlet-name>nowServlet</servlet-name>
     <servlet-class>kr.or.ddit.servlet.NowServlet</servlet-class>
@@ -48,5 +47,13 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-
+  <listener>
+    <listener-class>kr.or.ddit.listener.SessionListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>kr.or.ddit.listener.SessionAttributeListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>kr.or.ddit.listener.ContextPathListener</listener-class>
+  </listener>
 </web-app>
