--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,4 +56,7 @@
   <listener>
     <listener-class>kr.or.ddit.listener.ContextPathListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>kr.or.ddit.listener.CurrentUserListener</listener-class>
+  </listener>
 </web-app>
